<resources>
    <string name="app_name">PlayersDatabase</string>
    <string name="no_players_found">No players found</string>
    <string name="default_description">N/A</string>
    <string name="name">Name</string>
    <string name="about_this_player">About this Player:</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="save">Save</string>
    <string name="player_name">Player name</string>
    <string name="player_description">The player description</string>
    <string name="mandatory_error_message">Name is mandatory</string>
    <string name="delete_player_title">Delete player</string>
    <string name="delete_player_message">Are you sure you want to delete this player?</string>
    <string name="general_error_message">Ops, something when wrong!</string>
</resources>
